# rust-console

./: Cargo.toml  README.md
src/: app.rs  lib.rs  mock.rs
src/testdata/: tokenfactory.wasm
